# Pathtracing_OpenGL

./: CMakeLists.txt  README.md
assets/models/: cube.ply
assets/models/bunny/: bun_normals.ply  bun_res3_normals.ply  bun_res4_normals.ply
assets/models/dragon_recon/: dragon_res3_normals.ply  dragon_res4_normals.ply
dependencies/: glad.c  glad.h
shaders/: pathTracingShader.comp  rayTracingComputeShader.compute  raytracingFragmentShader.frag  raytracingVertexShader.vert  simpleFragmentShader.frag
src/: camera.cpp  camera.h  compute_shader.cpp  compute_shader.h  main.cpp  scene.cpp  scene.h  shader.cpp  shader.h
src/model/: bvh_utils.cpp  bvh_utils.h  model.cpp  model.h  model_utils.cpp  model_utils.h
